Add configs. Remove obsolete rc password plugin.

--- a/conf/vboxadm.conf.dist
+++ b/conf/vboxadm.conf.dist
@@ -3,3 +3,13 @@ dbuser=vboxadm
 dbpass=vboxadm
 dbdb=vboxadm
 dbhost=localhost
+
+[vacation]
+# config for vacation autoresonder
+dbuser=vacation
+dbpass=vacation
+dbdb=vboxadm
+dbhost=localhost
+
+[policyd]
+# config for policyd
