Fix domain names.

--- a/contrib/roundcube/plugins/vacation/config.ini
+++ b/contrib/roundcube/plugins/vacation/config.ini
@@ -11,7 +11,7 @@
 [default]
 driver = "vboxadm"
 subject = "Out of Office"
-transport = "vacation.planet49.com"
+transport = "vacation.domain.tld"
 dbase = "vboxadm"
 
 [dotforward]
