Fix install instructions.

--- a/doc/lighttpd/12-vboxadm.conf
+++ b/doc/lighttpd/12-vboxadm.conf
@@ -8,3 +8,10 @@ $HTTP["host"] =~ "vboxadm\.domain\.tld" {
                 "/icons/fffsilk/" => "/usr/share/icons/famfamfam/silk/",
         )
 }
+$HTTP["host"] =~ "roundcube\.domain\.tld" {
+        var.basedir = "/opt/roundcube/current/"
+        server.document-root = basedir
+        cgi.assign      = (
+               ".php"  => "/usr/bin/php5-cgi",
+        )
+}
