--- a/doc/dovecot/dovecot.conf
+++ b/doc/dovecot/dovecot.conf
@@ -5,8 +5,8 @@ listen=[::]
 disable_plaintext_auth = no
 log_timestamp = "%Y-%m-%d %H:%M:%S "
 syslog_facility = mail
-ssl_cert_file = /etc/ssl/certs/vs-mail-pf.pem
-ssl_key_file = /etc/ssl/private/vs-mail-pf.key
+ssl_cert_file = /etc/ssl/certs/hostname.pem
+ssl_key_file = /etc/ssl/private/hostname.key
 mail_location = maildir:/srv/vmail/%d/%n/Maildir
 mail_privileged_group = mail
 protocol imap {
