Rename lighty config. Add Apache config.

--- a/doc/lighttpd/50-vboxadm.conf
+++ b/doc/lighttpd/50-vboxadm.conf
@@ -1,4 +1,4 @@
-$HTTP["host"] =~ "vboxadm\.domain\.tld" {
+$HTTP["host"] =~ "^vboxadm\." {
         var.basedir = "/var/www/vboxadm/"
         server.document-root = basedir
         alias.url += (
@@ -8,7 +8,7 @@ $HTTP["host"] =~ "vboxadm\.domain\.tld" {
                 "/icons/fffsilk/" => "/usr/share/icons/famfamfam/silk/",
         )
 }
-$HTTP["host"] =~ "roundcube\.domain\.tld" {
+$HTTP["host"] =~ "^roundcube\." {
         var.basedir = "/opt/roundcube/current/"
         server.document-root = basedir
         cgi.assign      = (
