Improve documentation, fix example configuration.

--- a/doc/dovecot/dovecot.conf
+++ b/doc/dovecot/dovecot.conf
@@ -9,6 +9,8 @@ ssl_cert_file = /etc/ssl/certs/hostname.pem
 ssl_key_file = /etc/ssl/private/hostname.key
 mail_location = maildir:/srv/vmail/%d/%n/Maildir
 mail_privileged_group = mail
+first_valid_uid = XXXCHANGEMEXXX
+first_valid_gid = XXXCHANGEMEXXX
 protocol imap {
   mail_plugins = quota imap_quota
 }
@@ -18,15 +20,14 @@ protocol pop3 {
   mail_plugins = quota
 }
 protocol managesieve {
-  sieve=~/.dovecot.sieve
-  sieve_storage=~/sieve
+  # see plugin section
 }
 protocol lda {
   postmaster_address = postmaster@domain.tld
   mail_plugins = quota
   auth_socket_path = /var/run/dovecot/auth-master
-  mail_plugins = cmusieve
-  log_path = /var/vmail/dovecot-deliver.log
+  mail_plugins = sieve
+  log_path = /srv/vmail/dovecot-deliver.log
 }
 auth default {
   mechanisms = plain login
@@ -57,5 +58,7 @@ dict {
 }
 plugin {
   quota = maildir:storage=5000000
+  sieve = ~/.dovecot.sieve
+  sieve_dir = ~/sieve
   sieve_global_path = /var/vmail/globalsieverc
 }
