(Almost) finish RFC-Notify.

--- a/conf/vboxadm.conf.dist
+++ b/conf/vboxadm.conf.dist
@@ -3,6 +3,7 @@ dbuser=vboxadm
 dbpass=vboxadm
 dbdb=vboxadm
 dbhost=localhost
+domain=domain.tld
 
 # config for webfrontend
 [cgi]
@@ -46,3 +47,6 @@ max_spare_servers=20
 max_requests=250
 nsloglevel=2
 logsock=unix
+
+[rfc-notify]
+dry=0
