--- a/conf/vboxadm.conf.dist
+++ b/conf/vboxadm.conf.dist
@@ -16,6 +16,17 @@ no_ssl=1
 
 notify_interval=7
 
+[awl]
+ignore_net=192.168.
+only_domain=domain.tld
+mailserver = postfix
+lifetime = 365
+logfile = /var/log/mail.log
+whitelist = /etc/postfix/maps/whitelist
+
+[notify]
+logfile=/var/log/mail.log
+
 # config for smtpproxy
 [smtpproxy]
 caching=1
