Set default pwscheme to ssha256.

--- a/conf/vboxadm.conf.dist
+++ b/conf/vboxadm.conf.dist
@@ -7,8 +7,7 @@ domain=domain.tld
 
 # config for webfrontend
 [cgi]
-pwscheme=sha256
-# change to ssh256 after installation
+pwscheme=ssha256
 no_ssl=1
 
 # config for vacation autoresonder
