Introduced new config options media_prefix and base_url to allow operation as something other than /cgi-bin/vboxadm.pl or with the images at a different location.
Signed-off-by: Stephan Peijnik <debian@sp.or.at>

--- a/conf/vboxadm.conf.dist
+++ b/conf/vboxadm.conf.dist
@@ -9,6 +9,8 @@ domain=domain.tld
 [cgi]
 pwscheme=ssha256
 no_ssl=1
+base_url=/cgi-bin/vboxadm.pl
+media_prefix=
 
 # config for vacation autoresonder
 [vacation]
