--- a/conf/vboxadm.conf.dist
+++ b/conf/vboxadm.conf.dist
@@ -9,6 +9,7 @@ mail_location=/var/vmail
 [autodiscover]
 imap_hostname=mail.domain.tld
 pop3_hostname=mail.domain.tld
+pw_encrypt = 0
 
 # config for webfrontend
 [cgi]
